force-app/main/default/objects/refedge__Data_Mapping__c/fields/refedge__DC_Message__c.field-meta.xml
<CustomField>
    <fullName>refedge__DC_Message__c</fullName>
    <label>DC Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>