force-app/main/default/objects/refedge__Data_Mapping__c/fields/refedge__Default__c.field-meta.xml
<CustomField>
    <fullName>refedge__Default__c</fullName>
    <label>Default</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>