force-app/main/default/objects/refedge__Data_Mapping__c/fields/refedge__Filter_RefSearch_Visible__c.field-meta.xml
<CustomField>
    <fullName>refedge__Filter_RefSearch_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter RefSearch Visible</label>
    <type>Checkbox</type>
</CustomField>