force-app/main/default/objects/refedge__Data_Mapping__c/fields/refedge__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>refedge__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Data Mappings</relationshipLabel>
    <relationshipName>Data_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>