force-app/main/default/objects/refedge__Data_Mapping__c/fields/refedge__Program_Coverage__c.field-meta.xml
<CustomField>
    <fullName>refedge__Program_Coverage__c</fullName>
    <label>Program Coverage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>