force-app/main/default/objects/refedge__Data_Mapping__c/fields/refedge__Referenceability_Type__c.field-meta.xml
<CustomField>
    <fullName>refedge__Referenceability_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referenceability Type</label>
    <referenceTo>refedge__Referenceability_Type__c</referenceTo>
    <relationshipLabel>Data Mappings</relationshipLabel>
    <relationshipName>Data_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>